// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should handle resign delegate dropdown action 1`] = `
<DocumentFragment>
  <div
    class="sc-fznxsB kTBlBw"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Delegate
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Delegate Name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Rank
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Status
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Forged Amount
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Votes
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr kQCkEW"
                >
                  <span
                    class="flex items-center"
                    data-testid="DelegateRowItem__address"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold"
                >
                  <span
                    data-testid="DelegateRowItem__username"
                  >
                    testwallet2
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark"
                >
                  <span
                    data-testid="DelegateRowItem__rank"
                  >
                    #
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold justify-center text-theme-primary"
                >
                  <span
                    data-testid="DelegateRowItem__msq"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-center"
                >
                  <span
                    data-testid="DelegateRowItem__status"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-2 text-theme-neutral"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        status-clock.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-end"
                >
                  <span
                    class="whitespace-no-wrap"
                    data-testid="DelegateRowItem__forged"
                  >
                    2,450.643 Ѧ
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__votes"
                  >
                    <small
                      class="text-theme-neutral"
                    >
                      2,43%
                    </small>
                    <span
                      class="ml-1 whitespace-no-wrap"
                    >
                      2,450.643 Ѧ
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr edVuJS justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__actions"
                  >
                    <button
                      class="sc-AxhCb biicxn ml-16"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should handle update delegate dropdown action 1`] = `
<DocumentFragment>
  <div
    class="sc-fznxsB kTBlBw"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Delegate
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Delegate Name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Rank
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Status
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Forged Amount
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Votes
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr kQCkEW"
                >
                  <span
                    class="flex items-center"
                    data-testid="DelegateRowItem__address"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold"
                >
                  <span
                    data-testid="DelegateRowItem__username"
                  >
                    testwallet2
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark"
                >
                  <span
                    data-testid="DelegateRowItem__rank"
                  >
                    #
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold justify-center text-theme-primary"
                >
                  <span
                    data-testid="DelegateRowItem__msq"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-center"
                >
                  <span
                    data-testid="DelegateRowItem__status"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-2 text-theme-neutral"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        status-clock.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-end"
                >
                  <span
                    class="whitespace-no-wrap"
                    data-testid="DelegateRowItem__forged"
                  >
                    2,450.643 Ѧ
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__votes"
                  >
                    <small
                      class="text-theme-neutral"
                    >
                      2,43%
                    </small>
                    <span
                      class="ml-1 whitespace-no-wrap"
                    >
                      2,450.643 Ѧ
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr edVuJS justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__actions"
                  >
                    <button
                      class="sc-AxhCb biicxn ml-16"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render delegates 1`] = `
<DocumentFragment>
  <div
    class="sc-fznxsB kTBlBw"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Delegate
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Delegate Name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Rank
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Status
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Forged Amount
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Votes
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr kQCkEW"
                >
                  <span
                    class="flex items-center"
                    data-testid="DelegateRowItem__address"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold"
                >
                  <span
                    data-testid="DelegateRowItem__username"
                  >
                    testwallet2
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark"
                >
                  <span
                    data-testid="DelegateRowItem__rank"
                  >
                    #
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold justify-center text-theme-primary"
                >
                  <span
                    data-testid="DelegateRowItem__msq"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-center"
                >
                  <span
                    data-testid="DelegateRowItem__status"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-2 text-theme-neutral"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        status-clock.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc text-theme-neutral-light justify-end"
                >
                  <span
                    class="whitespace-no-wrap"
                    data-testid="DelegateRowItem__forged"
                  >
                    2,450.643 Ѧ
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr jJjPRc font-semibold text-theme-neutral-dark justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__votes"
                  >
                    <small
                      class="text-theme-neutral"
                    >
                      2,43%
                    </small>
                    <span
                      class="ml-1 whitespace-no-wrap"
                    >
                      2,450.643 Ѧ
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr edVuJS justify-end"
                >
                  <span
                    data-testid="DelegateRowItem__actions"
                  >
                    <button
                      class="sc-AxhCb biicxn ml-16"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render empty state 1`] = `
<DocumentFragment>
  <div
    class="sc-fznxsB kTBlBw"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Delegate
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Delegate Name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Rank
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Status
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Forged Amount
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Votes
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
